# chrono_mapper

./: .gitignore  Cargo.toml  build.sh  build.zig  build.zig.zon  core.d.ts  core.js  core_bg.wasm  core_bg.wasm.d.ts  histomap.d.ts  histomap_bg.wasm  host.sh  index.html  index.js  init.sh  publish.sh  run.sh  wasm.d.ts  wasm.js
.cargo/: config.toml
app/: Cargo.toml  gui.rs  lib.rs  shaders.rs  vertex.rs
app/pkg/: core.js  core_bg.wasm  core_bg.wasm.d.ts  index.html  index.js
app/pkg/css/: styles.css
app/src/: camera.rs  feature_labels.rs  geom.rs  lib.rs  loader.rs  map_tex.rs  mod.rs  runner.rs  util.rs
app/src/globe/: camera.rs  feature_labels.rs  geom.rs  map_tex.rs  mod.rs  shaders.rs  util.rs  vertex.rs
assets/shaders/: features.wgsl  globe.wgsl  render.wgsl  render_basemap.wgsl  render_features.wgsl
assets/shaders/types/: camera.wgsl
backend/: Cargo.toml  build.rs
backend/backend_macros/: Cargo.toml  lib.rs
backend/lib/: debug_overlay.rs  mod.rs  native.rs  state.rs  web.rs
backend/static/: index.html
backend_macros/: Cargo.toml  lib.rs
css/: styles.css
js/: index.js
pkg/: core.d.ts  core.js  core_bg.wasm  core_bg.wasm.d.ts  histomap.js  histomap_bg.wasm  histomap_bg.wasm.d.ts  index.html  index.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
runner/: Cargo.toml
runner/src/: lib.rs  main.rs
src/: main.zig
src/lib/: mod.rs
static/: index.html
web/: index.js  styles.css
