[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/mod.rs"
crate-type = ["cdylib", "rlib"]

[dependencies.backend]
path = "../backend"

[dependencies.serde_json]
version = "1.0.128"
default-features = false

[dependencies.geojson]
version = "0.24.1"

[dependencies.image]
version = "0.25.0"
default-features = false
features = ["tiff"]

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
bytemuck = { version = "1.4", features = ["derive"] }
wgpu = { workspace = true }
winit = { workspace = true }
ultraviolet = { version = "0.9.2", features = ["bytemuck"] }
earcutr = "0.4.3"
glyphon = "0.5.0"