[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/mod.rs"
crate-type = ["cdylib", "rlib"]

[features]
logging = ["backend/logging"]

[dependencies.backend]
path = "../backend"

[dependencies]
anyhow = "1.0.81"
bytemuck = { version = "1.4", features = ["derive"] }
ultraviolet = { version = "0.9.2", features = ["bytemuck"] }
earcutr = "0.4.3"
glyphon = "0.5.0"

[dependencies.geojson]
version = "0.24.1"

[dependencies.image]
version = "0.25.0"
default-features = false
features = ["tiff"]