[package]
name = "app"
version = "0.1.0"
edition = "2021"

[features]
logging = ["backend/logging"]

[lib]
name = "app_lib"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "app_bin"
path = "lib.rs"

[dependencies.backend]
path = "../backend"

[dependencies]
anyhow = "1.0.81"
bytemuck = { version = "1.4", features = ["derive"] }
earcutr = "0.4.3"
glyphon = "0.5.0"
geojson = { version = "0.24.1", default-features = false }