[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib/mod.rs"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
static-files = "0.2.3"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
static-files = "0.2.3"
winit = { workspace = true }
wgpu = { workspace = true, features = ["webgl"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = "4.3.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.45"
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.5"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement", "Element"] }