[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib/mod.rs"
crate-type = ["cdylib", "rlib"]

[features]
gh-pages = []

[build-dependencies]
static-files = "0.2.3"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
static-files = "0.2.3"
wgpu = { workspace = true, features = ["webgl"] }
winit = "0.29.15"
once_cell = "1.19.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = "4.3.3"
chrono = "0.4.35"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-logger = "0.2.0"
web-sys = { version = "0.3", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window", "Location", "Element", "HtmlCanvasElement"] }
console_error_panic_hook = "0.1.5"
chrono = { version = "0.4.35", features = ["wasmbind"] }