[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib/mod.rs"
crate-type = ["cdylib", "rlib"]

[features]
logging = ["dep:log", "dep:simple_logger", "dep:wasm-logger", "dep:console_error_panic_hook"]

[build-dependencies]
static-files = "0.2.3"

[dependencies.backend_macros]
path = "backend_macros"

[dependencies]
anyhow = "1.0.81"
log = { version = "0.4", optional = true }
winit = "0.29.15"
static-files = "0.2.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = { version = "4.3.3", optional = true }
wgpu = "0.19.3"
chrono = "0.4.35"
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.19.3", features = ["webgl"] }
wasm-bindgen = "0.2.45"
wasm-bindgen-futures = "0.4.30"
wasm-logger = { version = "0.2.0", optional = true }
console_error_panic_hook = { version = "0.1.5", optional = true }
chrono = { version = "0.4.35", features = ["wasmbind"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Headers", 
    "Request", "RequestInit", "RequestMode", 
    "Response", 
    "Window", 
    "Location", 
    "Element", "HtmlCanvasElement"
]