[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies.backend]
path = "../backend"

[dependencies.backend_macros]
path = "../backend_macros"

[dependencies.app]
path = "../app"

[dependencies]
log = { workspace = true }